# substrate

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  acm_plugin.go  acm_plugin_test.go  acm_types.go  apigateway_plugin.go  apigateway_plugin_test.go  apigateway_proxy_test.go  apigateway_types.go  apigatewayv2_plugin.go  apigatewayv2_plugin_test.go  apigatewayv2_types.go  appsync_plugin.go  appsync_plugin_test.go  appsync_types.go  athena_control.go  athena_plugin.go  athena_plugin_test.go  authz.go  authz_test.go  backup_plugin.go  backup_plugin_test.go  backup_types.go  batch_plugin.go  batch_plugin_test.go  bedrock_runtime_ctrl.go  bedrock_runtime_plugin.go  bedrock_runtime_plugin_test.go  benchmarks_test.go  betty.go  betty_cfn.go  betty_cfn_test.go  (+262 more)
.github/: dependabot.yml  pull_request_template.md
configs/: substrate-local.yaml
deploy/: README.md
docs/: endpoint-configuration.md  getting-started.md  index.md  package-lock.json  package.json  scope.md  services.md  testing-guide.md
emulator/: acm_plugin.go  acm_plugin_test.go  acm_types.go  apigateway_plugin.go  apigateway_plugin_test.go  apigateway_proxy_test.go  apigateway_types.go  apigatewayv2_plugin.go  apigatewayv2_plugin_test.go  apigatewayv2_types.go  appsync_plugin.go  appsync_types.go  (+275 more)
python/: README.md  pyproject.toml
python/src/pytest_substrate/: __init__.py  plugin.py  server.py
python/src/pytest_substrate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/tests/: test_plugin.py  test_server.py
(+23 files in other folders)
